--- a/packages/renderers/login-window/index.html
+++ b/packages/renderers/login-window/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Loading Window</title>
+    <title>Login Window</title>
   </head>
   <body>
     <div id="root"></div>
